- [SSO_CLIENT] [COOKIES] Correctly check the 'HttpOnly' attribute set from application's response
- [IDP] [COOKIES] Ensure 'HttpOnly' attribute is always set on IDP session cookies
- [UPGRADE] [SCRIPTS] Avoid updating Frontend's Redis internal IP when a custom port is used
- [CSS] Incorrect color conditions for custom form errors
- [API_PARSER] [CISCO_DUO] Unwanted error log on empty response


## [2.10.2] - 2023-09-25
### Fixed
- [API_PARSER] [CROWDSTRIKE] Delay query time of 2 minutes - to avoid missing events
- [FRONTEND] [FILEBEAT] Missing Rsyslog garbage templates in generated configurations
- [NODE] [STATE] Avoid errors on initial heartbeat monitoring
### Changed
- [FRONTEND] Set new default redis server to '127.0.0.5'
- [FRONTEND] [GUI] Show redis parameters when editing a Filebeat Listener to be able to select a different Redis cache
- [FRONTEND] [CONFIGURATION] Allow configured redis_password to be used for Filebeat Listener's cache


## [2.10.1] - 2023-09-12
### Fixed
- [LDAP_REPO] Avoid formatting errors for fields inserted to LDAP when creating/updating users
- [LDAP_REPO] Correct missing default user/group objectclasses configuration on existing repositories
- [RSYSLOG] Correct wrong rsyslog input configuration generation
- [NODE] [STATUS] Don't update Node state when put into MAINTENANCE
- [API_PARSER] Avoid problems while getting parameters by defining custom values
- [API_PARSER] [STATUS] Correctly set and update each node status for API parsers
- [API_PARSER] [SENTINEL_ONE] Fix account_type="user service" authentication routine


## [2.10.0] - 2023-08-22
### Removed
- [PREDATOR] Remove predator references
### Added
- [GUI] [FRONTEND] Selector of a custom certificate to use with an api parser
- [LOG_FORWARDER] [HIREDIS] Ability to specify that the destination key is a dynamic template
- [LOG_FORWARDER] New send_as_raw feature for LogForwarders in gui
- [API_PARSER] New collector **Retarus**
- [BACKEND] [GUI] HTTP/2 Health check